--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ buck-out/
 /ios/GoogleService-Info.plist
 /ios/dogstagram/GoogleService-Info.plist
 /android/app/google-services.json
+# /android/java_pid40998.hprof
+# android/java_pid40998.hprof
