--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.6.6",
     "@react-native-firebase/app": "^8.4.1",
+    "@react-native-firebase/database": "^7.5.4",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "axios": "^0.20.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-get-random-values": "^1.4.0",
     "react-native-image-picker": "^2.3.3",
+    "react-native-picker-select": "^8.0.0",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
