--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "uuid": "^8.3.0"
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
