--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/picker": "^1.6.6",
     "@react-native-firebase/app": "^8.4.1",
     "@react-native-firebase/database": "^7.5.4",
+    "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@ui-kitten/components": "^5.0.0",
@@ -33,6 +34,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-ui-kitten": "^4.4.1",
     "react-navigation": "^4.4.0",
+    "react-navigation-native": "^0.0.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
     "react-redux": "^7.2.1",
